# prelegal

./: .gitignore  CLAUDE.md  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: .dockerignore  Dockerfile  chat.py  database.py  main.py  pyproject.toml
backend/tests/: test_chat.py  test_database.py  test_main.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: nda-chat.tsx  nda-form.tsx  nda-preview.tsx
frontend/lib/: nda-template.ts
frontend/tests/: MANUAL_TESTS.md
frontend/tests/e2e/: create.spec.ts  dashboard.spec.ts  landing.spec.ts  print.spec.ts
frontend/tests/unit/: nda-template.test.ts  nda-types.test.ts
frontend/types/: nda.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt
